--- a/app/src/main/res/layout/activity_sample1.xml
+++ b/app/src/main/res/layout/activity_sample1.xml
@@ -1,52 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="32dp"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
-    <com.nihaskalam.progressbuttonlibrary.CircularProgressButton
-        android:id="@+id/circularButton1"
-        android:layout_width="196dp"
-        android:layout_height="64dp"
-        android:textColor="@color/text_state_selector"
-        android:textSize="22sp"
-        app:pb_colorIndicator="@color/colorButtonCompleteState"
-        app:pb_cornerRadius="48dp"
-        app:pb_iconComplete="@drawable/ic_action_accept"
-        app:pb_iconError="@drawable/ic_action_cancel"
-        app:pb_selectorComplete="@color/complete_state_selector"
-        app:pb_selectorError="@color/error_state_selector"
-        app:pb_selectorIdle="@color/idle_state_selector"
-        app:pb_textColorAfterClick="@color/colorWhite"
-        app:pb_textIdle="@string/submit" />
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="32dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingBottom="100dp">
 
-    <com.nihaskalam.progressbuttonlibrary.CircularProgressButton
-        android:id="@+id/circularButton2"
-        android:layout_width="196dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/text_state_selector"
-        android:textSize="22sp"
-        app:pb_colorIndicator="@color/colorButtonCompleteState"
-        app:pb_cornerRadius="48dp"
-        app:pb_iconComplete="@drawable/ic_action_accept"
-        app:pb_iconError="@drawable/ic_action_cancel"
-        app:pb_selectorComplete="@color/complete_state_selector"
-        app:pb_selectorError="@color/error_state_selector"
-        app:pb_selectorIdle="@color/idle_state_selector"
-        app:pb_textColorAfterClick="@color/colorWhite"
-        app:pb_textIdle="@string/submit" />
+        <com.nihaskalam.progressbuttonlibrary.CircularProgressButton
+            android:id="@+id/circularButton1"
+            android:layout_width="196dp"
+            android:layout_height="64dp"
+            android:onClick="onClickFirstBtn"
+            android:textColor="@color/text_state_selector"
+            android:textSize="22sp"
+            app:pb_colorIndicator="@color/colorButtonCompleteState"
+            app:pb_cornerRadius="48dp"
+            app:pb_iconCancel="@drawable/ic_action_cross"
+            app:pb_iconComplete="@drawable/ic_action_accept"
+            app:pb_iconError="@drawable/ic_action_cancel"
+            app:pb_selectorCancel="@color/pb_cancel_state_selector"
+            app:pb_selectorComplete="@color/complete_state_selector"
+            app:pb_selectorError="@color/error_state_selector"
+            app:pb_selectorIdle="@color/idle_state_selector"
+            app:pb_textColorAfterClick="@color/colorWhite"
+            app:pb_textIdle="@string/submit" />
 
-    <TextView
-        android:id="@+id/timeTV"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimary"
-        android:textSize="20dp"/>
+        <com.nihaskalam.progressbuttonlibrary.CircularProgressButton
+            android:id="@+id/circularButton2"
+            android:layout_width="196dp"
+            android:layout_height="64dp"
+            android:layout_marginTop="16dp"
+            android:onClick="onClickSecondBtn"
+            android:textColor="@color/text_state_selector"
+            android:textSize="22sp"
+            app:pb_colorIndicator="@color/colorButtonCompleteState"
+            app:pb_cornerRadius="48dp"
+            app:pb_iconCancel="@drawable/ic_action_cross"
+            app:pb_iconComplete="@drawable/ic_action_accept"
+            app:pb_iconError="@drawable/ic_action_cancel"
+            app:pb_selectorCancel="@color/pb_cancel_state_selector"
+            app:pb_selectorComplete="@color/complete_state_selector"
+            app:pb_selectorError="@color/error_state_selector"
+            app:pb_selectorIdle="@color/idle_state_selector"
+            app:pb_textColorAfterClick="@color/colorWhite"
+            app:pb_textIdle="@string/submit" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/timeTV"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20dp"
+            android:text="Percentage completed :"/>
+
+        <com.nihaskalam.progressbuttonlibrary.CircularProgressButton
+            android:id="@+id/circularButton3"
+            android:layout_width="196dp"
+            android:layout_height="64dp"
+            android:layout_marginTop="16dp"
+            android:onClick="onClickThirdBtn"
+            android:textColor="@color/text_state_selector"
+            android:textSize="22sp"
+            app:pb_colorIndicator="@color/colorButtonCompleteState"
+            app:pb_cornerRadius="48dp"
+            app:pb_iconCancel="@drawable/ic_action_cross"
+            app:pb_iconComplete="@drawable/ic_action_accept"
+            app:pb_iconError="@drawable/ic_action_cancel"
+            app:pb_selectorCancel="@color/pb_cancel_state_selector"
+            app:pb_selectorComplete="@color/complete_state_selector"
+            app:pb_selectorError="@color/error_state_selector"
+            app:pb_selectorIdle="@color/idle_state_selector"
+            app:pb_textColorAfterClick="@color/colorWhite"
+            app:pb_textIdle="@string/submit" />
+
+        <TextView
+            android:id="@+id/progressAmountTV"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20dp"
+            android:text="Progress completed :"/>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="16dp"
+            android:onClick="setProgress"
+            android:text="ProgressTo" />
+
+
+    </LinearLayout>
+</ScrollView>
